fixed spacing

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ label{
 	width: 300px;
     height: auto;
 	margin-top: -5rem !important;
+	margin-bottom: -4rem !important;
 }
 .thankyou{
 	width: 300px;
